--- a/index.ipynb
+++ b/index.ipynb
@@ -375,7 +375,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4](population()\n",
+    "los_cabos_pop = cities[4]['population'\n",
     "los_cabos_pop # 287651"
    ]
   },
