--- a/index.ipynb
+++ b/index.ipynb
@@ -359,23 +359,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'population'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-46e4191f7665>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-6ff89184151e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlos_cabos_pop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'population'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlos_cabos_pop\u001b[0m \u001b[0;31m# 287651\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'population'"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-46e4191f7665>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    los_cabos_pop = cities[4]()'population')\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4]['population']\n",
+    "los_cabos_pop = cities[4]()'population')\n",
     "los_cabos_pop # 287651"
    ]
   },
