--- a/index.ipynb
+++ b/index.ipynb
@@ -393,7 +393,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = count()\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
