automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -398,13 +398,13 @@
        "12"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_count = len(cities[0].['population')\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
