--- a/index.ipynb
+++ b/index.ipynb
@@ -445,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,8 +462,7 @@
    "source": [
     "pyeongchang_values = list(cities[-1])\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
-    "type(pyeongchang_values) # list"
+    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]"
    ]
   },
   {
