--- a/index.ipynb
+++ b/index.ipynb
@@ -445,22 +445,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['City', 'Country', 'Population', 'Area']"
+       "['PyeongChang', 'South Korea', 2581000, 3194]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = list(cities[-1])\n",
+    "pyeongchang_values = list(cities[-1].values())\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]"
    ]
