--- a/index.ipynb
+++ b/index.ipynb
@@ -474,16 +474,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,8 +492,7 @@
     "pyeongchang_keys = list(cities[-1].keys())\n",
     "\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
-    "type(pyeongchang_keys) # list"
+    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']"
    ]
   },
   {
